Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-14842

qScriptValueFromValue(QScriptEngine*, QVariant) crashes when engine is null

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.8.0
    • 4.5.0
    • Qt Script
    • None
    • bf8a9dc1248083dfb0ce5599b11af1727d349631

    Description

      The attached application crashes.
      The expected result is that qScriptValueFromValue() returns an invalid QScriptValue.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kenthans Kent Hansen (Inactive)
            kenthans Kent Hansen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes