Don't crash when null-pointer is passed to qScriptValueFromValue()

qScriptValueFromValue_helper() (or rather,
QScriptEnginePrivate::create()) will fall back to wrapping the
value using newVariant(), so there is no reason for the QVariant
specialization to check the return value. (In particular, if
the return value was invalid, that's _because_ the engine was
null, so we should definitely not call a function on the engine.)

Task-number: QTBUG-14842
Reviewed-by: Jedrzej Nowacki